<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>

	<groupId>com.sirap</groupId>
	<artifactId>sirap-parent</artifactId>
	<version>3.5-SNAPSHOT</version>
	<packaging>pom</packaging>

	<name>sirap-parent</name>
	<url>http://maven.apache.org</url>
	<modules>
		<module>sirap-basic</module>
		<module>sirap-pdf</module>
		<module>sirap-excel</module>
		<module>sirap-common</module>
		<module>sirap-db</module>
		<module>sirap-executor</module>
		<module>sirap-extractor</module>
		<module>sirap-geek</module>
		<module>sirap-third</module>
	<!-- 
		<module>sirap-executor</module>
		<module>sirap-ldap</module>
		<module>sirap-titus</module>
		<module>sirap-basic</module>
		<module>sirap-common</module>
		<module>sirap-basic</module>
		<module>sirap-common</module>
		<module>sirap-db</module>
		<module>sirap-executor</module>
		<module>sirap-extractor</module>
		<module>sirap-geek</module>
		<module>sirap-ldap</module>
		<module>sirap-qrcode</module>
		<module>../maspri/sirap-security</module>
		<module>sirap-zoo</module>
		-->
	</modules>
	
	<!--
	<repositories>
		<repository>
			<id>releases</id>
			<name>SF Nexus Repository</name>
			<url>http://10.116.218.107:8080/nexus/content/groups/public</url>
		</repository>
	</repositories>

	<distributionManagement>
		<repository>
			<id>nexus-releases</id>
			<name>Local Nexus Repository</name>
			<url>http://localhost:8081/nexus/content/repositories/releases</url>
		</repository>
		<snapshotRepository>
			<id>nexus-snapshots</id>
			<name>Local Nexus Repository</name>
			<url>http://localhost:8081/nexus/content/repositories/snapshots</url>
		</snapshotRepository>
	</distributionManagement>
	 -->

	<properties>
		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
	</properties>

	<reporting>
		<plugins>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-checkstyle-plugin</artifactId>
				<version>2.17</version>
				<configuration>
					<configLocation>google_checks.xml</configLocation>
				</configuration>
			</plugin>
		</plugins>
	</reporting>

	<build>
		<plugins>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-compiler-plugin</artifactId>
				<version>3.1</version>
				<configuration>
					<source>1.8</source>
					<target>1.8</target>
				</configuration>
			</plugin>
		</plugins>
	</build>

	<dependencies>
	</dependencies>

	<profiles>
		<profile>
			<id>s</id>
			<build>
				<plugins>
					<plugin>
						<artifactId>maven-source-plugin</artifactId>
						<version>2.1</version>
						<executions>
							<execution>
								<phase>compile</phase>
								<goals>
									<goal>jar</goal>
								</goals>
							</execution>
						</executions>
					</plugin>
				</plugins>
			</build>
		</profile>
	</profiles>
</project>
